@@ -3020,3 +3020,10 @@ Mon Oct  4 17:58:33 PDT 1999
 (Raster)
 
 my god.. copyright notices..........
+
+-------------------------------------------------------------------------------
+
+Mon Oct  4 18:10:34 PDT 1999
+(Raster)
+
+better directory checkign on startup.........
